// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component Test slots 1`] = `
<div
  class="dropdown"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    <p>
      The value
    </p>
     
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items"
      tabindex=""
    >
      <li
        class="select__item active"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            My item
          </div>
           
          <!---->
           
          <i
            class="select__item-active-icon iconoir-check-circle"
          />
        </a>
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component With items 1`] = `
<div
  class="dropdown"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    
        action.makeChoice
       
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items"
      tabindex=""
    >
      <li
        class="select__item"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
           
          <!---->
        </a>
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component With items 2`] = `
<div
  class="dropdown"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    <!---->
     
    <!---->
    
        A
       
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items"
      tabindex=""
    >
      <li
        class="select__item active"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
           
          <i
            class="select__item-active-icon iconoir-check-circle"
          />
        </a>
      </li>
       
      <li
        class="select__item"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="B"
            >
              B
            </span>
          </div>
           
          <!---->
           
          <!---->
        </a>
      </li>
       
      <li
        class="select__item disabled"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="C"
            >
              C
            </span>
          </div>
           
          <!---->
           
          <!---->
        </a>
      </li>
       
      <li
        class="select__item"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <i
              class="select__item-icon times"
            />
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="D"
            >
              D
            </span>
          </div>
           
          <!---->
           
          <!---->
        </a>
      </li>
       
      <li
        class="select__item"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="E"
            >
              E
            </span>
          </div>
           
          <div
            class="select__item-description"
          >
            
      My description
    
          </div>
           
          <!---->
        </a>
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component With items 3`] = `
<div
  class="dropdown dropdown--floating"
  tabindex="0"
>
  <!---->
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items"
      tabindex=""
    >
      <li
        class="select__item active"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
           
          <i
            class="select__item-active-icon iconoir-check-circle"
          />
        </a>
      </li>
       
      <li
        class="select__item"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="B"
            >
              B
            </span>
          </div>
           
          <!---->
           
          <!---->
        </a>
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component basics 1`] = `
<div
  class="dropdown"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    
        action.makeChoice
       
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items"
      tabindex=""
    />
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component basics 2`] = `
<div
  class="dropdown"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    
        action.makeChoice
       
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <!---->
     
    <ul
      class="select__items"
      tabindex=""
    />
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component basics 3`] = `
<div
  class="dropdown dropdown--disabled"
  tabindex=""
>
  <a
    class="dropdown__selected"
  >
    
        action.makeChoice
       
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items"
      tabindex=""
    />
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component change value prop 1`] = `
<div
  class="dropdown"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    <!---->
     
    <!---->
    
        B
       
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items"
      tabindex=""
    >
      <li
        class="select__item"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
           
          <!---->
        </a>
      </li>
       
      <li
        class="select__item active"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="B"
            >
              B
            </span>
          </div>
           
          <!---->
           
          <i
            class="select__item-active-icon iconoir-check-circle"
          />
        </a>
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component test focus 1`] = `
<div
  class="dropdown"
  tabindex=""
>
  <a
    class="dropdown__selected"
  >
    <!---->
     
    <!---->
    
        A
       
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items prevent-scroll"
      tabindex=""
    >
      <li
        class="select__item active hover"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
           
          <i
            class="select__item-active-icon iconoir-check-circle"
          />
        </a>
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component test focus 2`] = `
<div
  class="dropdown"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    <!---->
     
    <!---->
    
        A
       
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items prevent-scroll"
      tabindex=""
    >
      <li
        class="select__item active hover"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
           
          <i
            class="select__item-active-icon iconoir-check-circle"
          />
        </a>
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component test interactions 1`] = `
<div
  class="dropdown"
  tabindex=""
>
  <a
    class="dropdown__selected"
  >
    <!---->
     
    <!---->
    
        A
       
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items prevent-scroll"
      tabindex=""
    >
      <li
        class="select__item active hover"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
           
          <i
            class="select__item-active-icon iconoir-check-circle"
          />
        </a>
      </li>
       
      <li
        class="select__item"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="B"
            >
              B
            </span>
          </div>
           
          <!---->
           
          <!---->
        </a>
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Dropdown component test interactions 2`] = `
<div
  class="dropdown"
  tabindex="0"
>
  <a
    class="dropdown__selected"
  >
    <!---->
     
    <!---->
    
        A
       
    <i
      class="dropdown__toggle-icon iconoir-nav-arrow-down"
    />
  </a>
   
  <div
    class="dropdown__items hidden"
  >
    <div
      class="select__search"
    >
      <i
        class="select__search-icon iconoir-search"
      />
       
      <input
        class="select__search-input"
        placeholder="action.search"
        tabindex="0"
        type="text"
      />
    </div>
     
    <ul
      class="select__items prevent-scroll"
      tabindex=""
    >
      <li
        class="select__item active hover"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="A"
            >
              A
            </span>
          </div>
           
          <!---->
           
          <i
            class="select__item-active-icon iconoir-check-circle"
          />
        </a>
      </li>
       
      <li
        class="select__item"
      >
        <a
          class="select__item-link"
        >
          <div
            class="select__item-name"
          >
            <!---->
             
            <!---->
             
            <span
              class="select__item-name-text"
              title="B"
            >
              B
            </span>
          </div>
           
          <!---->
           
          <!---->
        </a>
      </li>
    </ul>
     
    <!---->
     
    <!---->
  </div>
</div>
`;
